--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="play-board">
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </body>
 
 </html>
