--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <div class="wrapper">
         <div class="game-details">
-            <span class="score">Score:15</span>
-            <span class="high-score">Score:15</span>
+            <span class="score">Score:0</span>
+            <span class="high-score">High Score:15</span>
         </div>
-        <div class="play-board">
-        </div>
+        <div class="play-board"></div>
     </div>
     <script src="app.js" defer></script>
 </body>
