comment lines added

--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
 
 <body>
     <div class="wrapper">
+        <!-- Game details start -->
         <div class="game-details">
             <span class="score">Score:0</span>
             <span class="high-score">High Score</span>
         </div>
+        <!-- Game details end -->
+
         <div class="play-board"></div>
+
         <div class="controls">
+            <!-- Direction keys start -->
             <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
             <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
             <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
             <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
+            <!-- Direction keys end -->
         </div>
     </div>
+
     <script src="app.js" defer></script>
 </body>
 
